<resources>
    <string name="app_name">Network Reconnaissance</string>
    <string name="app_subtitle">A Wi-Fi / Network Scanner Application</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign-In</string>
    <string name="activity_title_sign_in">Sign In</string>
    <string name="contentdesc_logo">Network Reconnaissance Logo</string>

    <!-- Dashboard Activity -->
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_ethical_hacker">Ethical hacker,</string>
    <string name="button_settings">Settings</string>
    <string name="button_sign_out">Sign-Out</string>
    <string name="button_scan">Scan Now!</string>

</resources>