<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome" />

        <TextView
            android:id="@+id/txtEthHacker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ethical_hacker" />

        <TextView
            android:id="@+id/txtUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_username" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginBottom="231dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:text="@string/button_scan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/button_settings" />

            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/errorColorDark"
                android:text="@string/button_sign_out" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>